<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/title"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:fontFamily="@font/open_sans"
        android:labelFor="@id/currentRealInput"
        android:text="@string/valor_em_real"
        android:textAlignment="center"
        android:textColor="#333333"
        android:textSize="36sp"
        app:layout_constraintBottom_toTopOf="@+id/currentRealInput"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/currentRealInput"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:autofillHints=""
        android:ems="10"
        android:fontFamily="@font/open_sans"
        android:inputType="numberDecimal"
        android:textAlignment="center"
        app:layout_constraintBottom_toTopOf="@+id/dolarValue"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/title" />

    <TextView
        android:id="@+id/dolarValue"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:fontFamily="@font/open_sans"
        android:text="@string/valor_atual_do_dolar"
        android:textAlignment="center"
        android:textColor="#666666"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/currentDollar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/currentRealInput" />

    <TextView
        android:id="@+id/euroValue"
        android:layout_width="0dp"
        android:layout_height="28dp"
        android:layout_marginTop="10dp"
        android:fontFamily="@font/open_sans"
        android:text="@string/valor_atual_do_euro"
        android:textAlignment="center"
        android:textColor="#666666"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/currentEuro"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/currentDollar" />

    <Button
        android:id="@+id/convertButton"
        android:layout_width="351dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="15dp"
        android:fontFamily="@font/open_sans"
        android:text="@string/converter"
        android:textColor="#333333"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/clearButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/dollarFinal" />

    <Button
        android:id="@+id/clearButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="15dp"
        android:fontFamily="@font/open_sans"
        android:text="@string/limpar"
        android:textColor="#333333"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/devByButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/convertButton" />

    <Button
        android:id="@+id/devByButton"
        android:layout_width="371dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp"
        android:background="#7159C1"
        android:text="@string/desenvolvido_por"
        android:textColor="#FFFFFF"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/clearButton" />

    <TextView
        android:id="@+id/dollarLabel"
        android:layout_width="0dp"
        android:layout_height="22dp"
        android:layout_marginStart="30dp"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="10dp"
        android:fontFamily="@font/open_sans"
        android:text="@string/valor_em_dolarb"
        android:textAlignment="center"
        android:textColor="#666666"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/dollarFinal"
        app:layout_constraintEnd_toStartOf="@+id/euroLabel2"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/currentEuro" />

    <TextView
        android:id="@+id/euroLabel2"
        android:layout_width="0dp"
        android:layout_height="22dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="30dp"
        android:layout_marginBottom="10dp"
        android:fontFamily="@font/open_sans"
        android:text="@string/valor_em_eurob"
        android:textAlignment="center"
        android:textColor="#666666"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/euroFinal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/dollarLabel"
        app:layout_constraintTop_toBottomOf="@+id/currentEuro" />

    <TextView
        android:id="@+id/dollarFinal"
        android:layout_width="0dp"
        android:layout_height="40dp"
        android:layout_marginStart="30dp"
        android:layout_marginBottom="27dp"
        android:fontFamily="@font/open_sans"
        android:textAlignment="center"
        android:textColor="#333333"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/convertButton"
        app:layout_constraintEnd_toStartOf="@+id/euroFinal"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/dollarLabel" />

    <TextView
        android:id="@+id/currentDollar"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:layout_marginTop="10dp"
        android:fontFamily="@font/open_sans"
        android:textAlignment="center"
        android:textColor="#333333"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/euroValue"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/dolarValue" />

    <TextView
        android:id="@+id/currentEuro"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:layout_marginTop="10dp"
        android:fontFamily="@font/open_sans"
        android:textAlignment="center"
        android:textColor="#333333"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/dollarLabel"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/euroValue" />

    <TextView
        android:id="@+id/euroFinal"
        android:layout_width="0dp"
        android:layout_height="40dp"
        android:layout_marginEnd="30dp"
        android:layout_marginBottom="15dp"
        android:fontFamily="@font/open_sans"
        android:textAlignment="center"
        android:textColor="#333333"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/convertButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/dollarFinal"
        app:layout_constraintTop_toBottomOf="@+id/dollarLabel"
        app:layout_constraintVertical_bias="0.482" />

</androidx.constraintlayout.widget.ConstraintLayout>